k8s/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: ecommerce-service

spec:

  selector:
    app: ecommerce

  ports:

  - protocol: TCP

    port: 80

    targetPort: 80

  type: LoadBalancer
